--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "website",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,26 +9,40 @@
     "preview": "npx nuxthub preview",
     "deploy": "npx nuxthub deploy",
     "postinstall": "nuxt prepare",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "typecheck": "nuxt prepare && vue-tsc -b --noEmit"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
+    "@nuxt/icon": "1.15.0",
     "@nuxthub/core": "^0.9.0",
-    "nuxt": "^3.17.5",
+    "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "nuxt": "^4.0.0",
+    "reka-ui": "^2.3.2",
+    "shadcn-nuxt": "2.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/memory": "^1.2.2",
     "@nuxt/eslint-config": "^1.4.1",
+    "@nuxtjs/color-mode": "^3.5.2",
     "eslint": "^9.29.0",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.10",
     "wrangler": "^4.20.1"
   },
-  "packageManager": "pnpm@10.12.1",
+  "packageManager": "pnpm@10.13.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp",
       "unrs-resolver",
