--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "typecheck": "nuxt prepare && vue-tsc -b --noEmit"
   },
   "dependencies": {
-    "@nuxt/eslint": "^1.4.1",
+    "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "1.15.0",
     "@nuxthub/core": "^0.9.0",
-    "@tailwindcss/vite": "^4.1.11",
-    "@vueuse/core": "^13.5.0",
+    "@tailwindcss/vite": "^4.1.13",
+    "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "nuxt": "^4.0.0",
-    "reka-ui": "^2.3.2",
+    "nuxt": "^4.1.1",
+    "reka-ui": "^2.5.0",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.5",
-    "vue": "^3.5.16",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@iconify-json/memory": "^1.2.2",
-    "@nuxt/eslint-config": "^1.4.1",
+    "@nuxt/eslint-config": "^1.9.0",
     "@nuxtjs/color-mode": "^3.5.2",
-    "eslint": "^9.29.0",
-    "typescript": "^5.8.3",
-    "vue-tsc": "^2.2.10",
-    "wrangler": "^4.20.1"
+    "eslint": "^9.35.0",
+    "typescript": "^5.9.2",
+    "vue-tsc": "^2.2.12",
+    "wrangler": "^4.35.0"
   },
   "packageManager": "pnpm@10.13.1",
   "pnpm": {
@@ -46,6 +46,7 @@
       "esbuild",
       "sharp",
       "unrs-resolver",
+      "vue-demi",
       "workerd"
     ]
   }
