chore: update brewfile

--- a/public/Brewfile
+++ b/public/Brewfile
@@ -22,12 +22,12 @@ brew "go"
 brew "icu4c@76"
 brew "libusb"
 brew "libxml2"
-brew "python@3.13"
 brew "openjdk"
 brew "maven"
 brew "mesa"
 brew "mkcert"
 brew "nss"
+brew "python@3.13"
 brew "pipx"
 brew "pkgconf"
 brew "python-setuptools"
@@ -38,11 +38,9 @@ brew "yarn"
 brew "yt-dlp"
 brew "z"
 brew "zoxide"
-brew "azure/functions/azure-functions-core-tools@4"
 brew "oven-sh/bun/bun"
 cask "adguard"
-cask "adobe-acrobat-reader"
-cask "adobe-creative-cloud"
+cask "affinity"
 cask "android-studio"
 cask "betterdisplay"
 cask "blip"
